--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -286,6 +286,12 @@
       <artifactId>wiremock</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>au.com.dius.pact.consumer</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.2.0-beta.2</version>
+    </dependency>
   </dependencies>
 
 
