--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -290,7 +290,7 @@
     <dependency>
       <groupId>au.com.dius.pact.consumer</groupId>
       <artifactId>junit</artifactId>
-      <version>4.2.0-beta.2</version>
+      <version>4.2.1</version>
     </dependency>
   </dependencies>
 
